edited page styles / added camry picture

--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Аренда автомобилей </title>
 </head>
-<body style="background-color: beige;">
-	<nav align="center" style="background-color: black"><a style="color: whitesmoke; text-decoration: none;" href ="index1.html" title ="Главная">Главная</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: whitesmoke; text-decoration: none;" href ="carfleet.html" title ="Наши   автомобили">Наши   автомобили</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="color: whitesmoke; text-decoration: none;" href="contacts.html"  title="Контакты">Контакты</a></nav>
+<body>
+	<nav align="center" style="background-color: black"><a class="nav-links-index1" href ="index1.html" title ="Главная">Главная</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="nav-links-index1" href ="carfleet.html" title ="Наши   автомобили">Наши   автомобили</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="nav-links-index1" href="contacts.html"  title="Контакты">Контакты</a></nav>
 	<h1>Контакты</h1>
 	<p><strong>г.Москва</strong></p>
 	<h1>Контактный телефон</h1>
